Fix currency spacing

--- a/src/components/CurrencyComp/currency.css
+++ b/src/components/CurrencyComp/currency.css
@@ -1,16 +1,11 @@
 .currencyRoot {
     display:flex;
     flex-direction: row;
-    aspect-ratio: 20/10;
     align-items: center;
-    container-type: inline-size;
-}
-
-.currencyAmount {
-    font-size: 50cqw;
+    width: auto;
+    height: auto;
 }
 
 .currencyImage {
-    height: 100%;
     width: auto;
 }
